updated the css to have the overflow no longer hidden

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   background: #fff;
   height: 100vh;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .rorschach {
